--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,52 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".DetailsActivity">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/movie_poster"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_margin="@dimen/layout_margin"
-        android:contentDescription="@string/movie_poster"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/detail_poster"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/detail_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Judul Film"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/detail_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="2023-11-20"
+                android:textColor="#666666" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/title_text"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/layout_margin"
-        android:ellipsize="end"
-        android:maxLines="4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/movie_poster"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Title" />
+        android:layout_marginTop="24dp"
+        android:text="Overview"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
 
     <TextView
-        android:id="@+id/release_text"
-        style="@style/TextAppearance.AppCompat.Subhead"
-        android:layout_width="0dp"
+        android:id="@+id/detail_overview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@id/title_text"
-        app:layout_constraintStart_toStartOf="@+id/title_text"
-        app:layout_constraintTop_toBottomOf="@id/title_text"
-        tools:text="Release" />
+        android:layout_marginTop="8dp"
+        android:text="Deskripsi"
+        android:lineSpacingMultiplier="1.2"
+        android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/overview_text"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_margin"
-        app:layout_constraintEnd_toEndOf="@+id/release_text"
-        app:layout_constraintStart_toStartOf="@+id/movie_poster"
-        app:layout_constraintTop_toBottomOf="@+id/movie_poster"
-        tools:text="Overview" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
